--- a/CheckYourEligibility-Admin/Views/Application/Results.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Results.cshtml
@@ -53,13 +53,13 @@
                        <td class="govuk-table__cell">@application.Reference</td>
                        <td class="govuk-table__cell">@(@application.ParentFirstName + " " + @application.ParentLastName)</td>
                        <td class="govuk-table__cell">@(@application.ChildFirstName + " " + application.ChildLastName)</td>
-                       <td class="govuk-table__cell">@Convert.ToDateTime(application.ChildDateOfBirth).ToString("MMM dd yyyy")</td>
+                       <td class="govuk-table__cell">@Convert.ToDateTime(application.ChildDateOfBirth).ToString("dd MMM yyyy")</td>
                        <td class="govuk-table__cell">
                             <strong class="govuk-tag @statusColor[application.Status]">
                                 @statusName[application.Status]
                             </strong>
                        </td>
-                       <td class="govuk-table__cell">@application.Created.ToString("MMM dd yyyy")</td>
+                       <td class="govuk-table__cell">@application.Created.ToString("dd MMM yyyy")</td>
                    </tr>
                }
            </tbody>
