--- a/CheckYourEligibility-Admin/Views/Application/Process_Appeals.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Process_Appeals.cshtml
@@ -1,4 +1,27 @@
 ﻿@model CheckYourEligibility.Domain.Responses.ApplicationSearchResponse;
+@{
+    Dictionary<string, string> statusColor = new Dictionary<string, string>
+    {
+        {"Entitled", "govuk-tag--green"},
+        {"EvidenceNeeded", "govuk-tag--light-blue"},
+        {"ReceivingEntitlement", "govuk-tag--pink"},
+        {"SentForReview", "govuk--tag-blue"},
+        {"ReviewedEntitled", "govuk--tag-green"},
+        {"ReviewedNotEntitled", "govuk--tag-red"}
+    };
+
+    Dictionary<string, string> statusName = new Dictionary<string, string>
+    {
+        {"Entitled", "Entitled"},
+        {"EvidenceNeeded", "Evidence Needed"},
+        {"ReceivingEntitlement", "Receiving"},
+        {"SentForReview", "Sent for Review"},
+        {"ReviewedEntitled", "Reviewed Entitled"},
+        {"ReviewedNotEntitled", "Reviewed Not Entitled"}
+    };
+
+}
+
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
@@ -34,167 +57,36 @@
         <div class="govuk-grid-row">
 
             <div class="govuk-grid-column-full">
-
-
                 <table class="govuk-table">
                     <thead class="govuk-table__head">
                         <tr class="govuk-table__row">
-
                             <th class="govuk-table__header" scope="col" id="select-all"></th>
                             <th class="govuk-table__header" scope="col">Reference</th>
-                            <th class="govuk-table__header" scope="col">Parent or guardian</th>
+                            <th class="govuk-table__header" scope="col">Parent / Guardian</th>
                             <th class="govuk-table__header" scope="col">Child</th>
-                            <th class="govuk-table__header govuk-table__header--numeric" scope="col">Child date of birth</th>
-                            <th class="govuk-table__header" scope="col">Status</th>
-                            <th class="govuk-table__header govuk-table__header--numeric" scope="col">Submission date</th>
-
-                            <th class="govuk-table__header govuk-table__header--numeric" scope="col">Sent for review on</th>
+                            <th class="govuk-table__header" scope="col">Child date of birth</th>
+                            <th class="govuk-table__header" scope="col"> Status</th>
+                            <th class="govuk-table__header" scope="col">Submission date</th>
                         </tr>
                     </thead>
                     <tbody class="govuk-table__body">
-                        <tr class="govuk-table__row govuk-table__row--selected">
-                            <td class="govuk-table__cell">
-                            </td>
+                        @foreach (var application in Model.Data)
+                        {
 
-                            <td class="govuk-table__cell"><a href="../records/not-entitled-appeals-multi.html" class="govuk-link">44455453</a></td>
-                            <td class="govuk-table__cell">Eden Tesfay</td>
-                            <td class="govuk-table__cell">Samual Tesfay</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">18 Sep 2017</td>
-                            <td class="govuk-table__cell">
-                                <strong class="govuk-tag govuk-tag--light-blue">
-                                    Evidence needed
-                                </strong>
-                            </td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">01 Sep 2023</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">25 Sep 2023</td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                            <td class="govuk-table__cell">
-                            </td>
-
-
-                            <td class="govuk-table__cell"><a href="../records/not-entitled-appeals-multi" class="govuk-link">44455454</a></td>
-                            <td class="govuk-table__cell">Eden Tesfay</td>
-                            <td class="govuk-table__cell">Thomas Tesfay</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">01 Jun 2019</td>
-                            <td class="govuk-table__cell">
-                                <strong class="govuk-tag govuk-tag--light-blue">
-                                    Evidence needed
-                                </strong>
-                            </td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">01 Sep 2023</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">25 Sep 2023</td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                            <td class="govuk-table__cell">
-                            </td>
-
-
-                            <td class="govuk-table__cell"><a href="../records/not-entitled-appeals-multi" class="govuk-link">44455455</a></td>
-                            <td class="govuk-table__cell">Eden Tesfay</td>
-                            <td class="govuk-table__cell">Rachel Tesfay</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">05 Aug 2021</td>
-                            <td class="govuk-table__cell">
-                                <strong class="govuk-tag govuk-tag--light-blue">
-                                    Evidence needed
-                                </strong>
-                            </td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">01 Sep 2023</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">25 Sep 2023</td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                            <td class="govuk-table__cell">
-                            </td>
-
-
-                            <td class="govuk-table__cell"><a href="../records/not-entitled-appeals" class="govuk-link">44455456</a></td>
-                            <td class="govuk-table__cell">Warren Sutton</td>
-                            <td class="govuk-table__cell">Lisa Sutton</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">18 Sep 2017</td>
-                            <td class="govuk-table__cell">
-                                <strong class="govuk-tag govuk-tag--light-blue">
-                                    Evidence needed
-                                </strong>
-                            </td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">01 Sep 2023</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">25 Sep 2023</td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                            <td class="govuk-table__cell">
-                            </td>
-                            <td class="govuk-table__cell"><a href="" class="govuk-link">44455457</a></td>
-                            <td class="govuk-table__cell">Alan Jones</td>
-                            <td class="govuk-table__cell">Jack Jones</td>
-
-                            <td class="govuk-table__cell govuk-table__cell--numeric">18 Sep 2017</td>
-                            <td class="govuk-table__cell">
-                                <strong class="govuk-tag govuk-tag--light-blue">
-                                    Evidence needed
-                                </strong>
-                            </td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">01 Sep 2023</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">25 Sep 2023</td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                            <td class="govuk-table__cell">
-                            </td>
-                            <td class="govuk-table__cell"><a href="" class="govuk-link">44455458</a></td>
-                            <td class="govuk-table__cell">Eden Tesfay</td>
-                            <td class="govuk-table__cell">Samual Tesfay</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">18 Sep 2017</td>
-                            <td class="govuk-table__cell">
-                                <strong class="govuk-tag govuk-tag--light-blue">
-                                    Evidence needed
-                                </strong>
-                            </td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">01 Sep 2023</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">25 Sep 2023</td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                            <td class="govuk-table__cell">
-                            </td>
-                            <td class="govuk-table__cell"><a href="" class="govuk-link">44455459</a></td>
-                            <td class="govuk-table__cell">Jennifer Langley</td>
-                            <td class="govuk-table__cell">Tilly Langley</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">18 Sep 2017</td>
-                            <td class="govuk-table__cell">
-                                <strong class="govuk-tag govuk-tag--grey">
-                                    Sent for review
-                                </strong>
-                            </td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">01 Sep 2023</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">25 Sep 2023</td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                            <td class="govuk-table__cell">
-                            </td>
-                            <td class="govuk-table__cell"><a href="" class="govuk-link">44455453</a></td>
-                            <td class="govuk-table__cell">Susan Francis</td>
-                            <td class="govuk-table__cell">Noah Francis</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">18 Sep 2017</td>
-                            <td class="govuk-table__cell">
-                                <strong class="govuk-tag govuk-tag--grey">
-                                    Sent for review
-                                </strong>
-                            </td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">01 Sep 2023</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">25 Sep 2023</td>
-                        </tr>
-                        <tr class="govuk-table__row">
-                            <td class="govuk-table__cell">
-                            </td>
-                            <td class="govuk-table__cell"><a href="" class="govuk-link">44455453</a></td>
-                            <td class="govuk-table__cell">John Smith</td>
-                            <td class="govuk-table__cell">Jo Smith</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">18 Sep 2017</td>
-                            <td class="govuk-table__cell">
-                                <strong class="govuk-tag govuk-tag--grey">
-                                    Sent for review
-                                </strong>
-                            </td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">01 Sep 2023</td>
-                            <td class="govuk-table__cell govuk-table__cell--numeric">25 Sep 2023</td>
-                        </tr>
+                            <tr class="govuk-table__row">
+                                <td class="govuk-table__cell"></td>
+                                <td class="govuk-table__cell">@application.Reference</td>
+                                <td class="govuk-table__cell">@(@application.ParentFirstName + " " + @application.ParentLastName)</td>
+                                <td class="govuk-table__cell">@(@application.ChildFirstName + " " + application.ChildLastName)</td>
+                                <td class="govuk-table__cell">@Convert.ToDateTime(application.ChildDateOfBirth).ToString("dd MMM yyyy")</td>
+                                <td class="govuk-table__cell">
+                                    <strong class="govuk-tag @statusColor[application.Status]">
+                                        @statusName[application.Status]
+                                    </strong>
+                                </td>
+                                <td class="govuk-table__cell">@application.Created.ToString("dd MMM yyyy")</td>
+                            </tr>
+                        }
                     </tbody>
                 </table>
             </div>
