--- a/CheckYourEligibility-Admin/Views/Application/Results.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Results.cshtml
@@ -3,19 +3,22 @@
 @{
     Dictionary<string, string> statusColor = new Dictionary<string, string>
     {
-        {"Open", "govuk-tag--green"},
-        {"DocumentNeeded", "govuk-tag--light-blue"},
+        {"Entitled", "govuk-tag--green"},
+        {"EvidenceNeeded", "govuk-tag--light-blue"},
         {"ReceivingEntitlement", "govuk-tag--pink"},
-        {"PendingApproval", "govuk--tag-blue"}
-        //review not entitled?
+        {"SentForReview", "govuk--tag-blue"},
+        {"ReviewedEntitled", "govuk--tag-green"},
+        {"ReviewedNotEntitled", "govuk--tag-red"}
     };
 
     Dictionary<string, string> statusName = new Dictionary<string, string>
     {
-        {"Open", "Entitled"},
-        {"DocumentNeeded", "Evidence Needed"},
+        {"Entitled", "Entitled"},
+        {"EvidenceNeeded", "Evidence Needed"},
         {"ReceivingEntitlement", "Receiving"},
-        {"PendingApproval", "Sent for Review"}
+        {"SentForReview", "Sent for Review"},
+        {"ReviewedEntitled", "Reviewed Entitled"},
+        {"ReviewedNotEntitled", "Reviewed Not Entitled"}
     };
 
 }
