--- a/CheckYourEligibility-Admin/Views/BulkUpload/Batch_Check.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkUpload/Batch_Check.cshtml
@@ -14,26 +14,28 @@
 <form asp-controller="BulkUpload" asp-action="Batch_Check" method="post" enctype="multipart/form-data">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l">Check free school meals – multiple students </h1>
+            <h1 class="govuk-heading-l">Check free school meals – multiple students</h1>
             <p>Use this page to batch check free school meal entitlement for the children of multiple parents.</p>
-            <h2 class="govuk-heading-m">How it works </h2>
+            <h2 class="govuk-heading-m">How it works</h2>
             <ol class="govuk-list govuk-list--number">
-                <li>Download the <a href="~/documents/batchchecktemplate.csv" class="govuk-link">batch check template</a> (XXkb) </li>
-                <li>Complete the template by adding the details of all parents you wish to check: Name, Date of birth, National Insurance number or Asylum support reference number. Make sure you save it as a csv file. </li>
-                <li>Upload the completed template using the ‘Upload template’ function on this page.  </li>
-                <li>You’ll be given a file to download containing results. </li>
+                <li>Download the <a href="~/documents/batchchecktemplate.csv" class="govuk-link">batch check template</a> (XXkb)</li>
+                <li>Complete the template by adding the details of all parents you wish to check: Name, Date of birth, National Insurance number or Asylum support reference number. Make sure you save it as a csv file.</li>
+                <li>Upload the completed template using the ‘Upload template’ function on this page.</li>
+                <li>You’ll be given a file to download containing results.</li>
             </ol>
-            <h2 class="govuk-heading-m">Upload template </h2>
-            <p>Please ensure you only upload a completed version of the batch check template, in csv format.  </p>
+            <h2 class="govuk-heading-m">Upload template</h2>
+            <p>Please ensure you only upload a completed version of the batch check template, in csv format.</p>
             <div class="govuk-form-group">
-                <input class="govuk-file-upload" id="file-upload-1" name="fileUpload" type="file" accept=".csv">
+                <label class="govuk-label" for="file-upload-1">Upload your CSV file</label>
+                <input class="govuk-file-upload" id="file-upload-1" name="fileUpload" type="file" accept=".csv" aria-label="Upload CSV file for batch check">
             </div>
 
-            <button class="govuk-button" data-module="govuk-button">
+            <button class="govuk-button" data-module="govuk-button" aria-label="Perform batch check">
                 Perform Checks
             </button>
         </div>
     </div>
 </form>
+
 
 <script src="/js/validationSummary.js"></script>
