--- a/CheckYourEligibility-Admin/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Index.cshtml
@@ -13,101 +13,100 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">
-           @Model.Organisation.Name
+            @Model.Organisation.Name
         </h1>
         @if (@Model.Organisation.Category.Name == Constants.CategoryTypeSchool)
-{
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full">
-                <div class="dfe-grid-container">
-                    <div class="dfe-card-container">
-                        <div class="def-card">
-                            <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Enter_Details", "Check")">Check free school meals - single student</a>
-                            </h2>
-                            <p>Find out if individual pupils can get free school meals.</p>
-                        </div>
-                    </div>
-                    <div class="dfe-card-container">
-                        <div class="def-card">
-                            <h2 class="govuk-heading-m">
-                                    <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Batch_Check", "BulkUpload")">Check free school meals - multiple students</a>
-                            </h2>
-                            <p>Find out if multiple pupils can get free school meals by uploading a csv template.</p>
-                        </div>
-                    </div>
-                    <div class="dfe-card-container">
-                        <div class="def-card">
-                            <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Process_Appeals", "Application")">Process appeals</a>
-                            </h2>
-                            <p>Check the status of applications being appealed, and declare those ready for local authority review.</p>
-                        </div>
-                    </div>
-                    <div class="dfe-card-container">
-                        <div class="def-card">
-                            <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="applications">Finalise applications</a>
-                            </h2>
-                            <p>Finalise applications for free school meals.</p>
-                        </div>
-                    </div>
-                    <div class="dfe-card-container">
-                        <div class="def-card">
-                            <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="/Application/Search">Search all records</a>
-                            </h2>
-                            <p>Search all pupil free school meal records and export results.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
- }     
-        else if(@Model.Organisation.Category.Name == "Local Authority")
         {
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full">
-                <div class="dfe-grid-container">
-                    <div class="dfe-card-container">
-                        <div class="def-card">
-                            <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Enter_Details", "Check")">Check free school meals - single student</a>
-                            </h2>
-                            <p>Find out if individual pupils can get free school meals.</p>
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-full">
+                    <div class="dfe-grid-container">
+                        <div class="dfe-card-container">
+                            <div class="def-card">
+                                <h2 class="govuk-heading-m">
+                                    <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Enter_Details", "Check")" aria-label="Check free school meals for single student">Check free school meals - single student</a>
+                                </h2>
+                                <p>Find out if individual pupils can get free school meals.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dfe-card-container">
-                        <div class="def-card">
-                            <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Batch_Check", "BulkUpload")">Check free school meals - multiple students</a>
-                            </h2>
-                            <p>Find out if multiple pupils can get free school meals by uploading a csv template.</p>
+                        <div class="dfe-card-container">
+                            <div class="def-card">
+                                <h2 class="govuk-heading-m">
+                                    <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Batch_Check", "BulkUpload")" aria-label="Check free school meals for multiple students">Check free school meals - multiple students</a>
+                                </h2>
+                                <p>Find out if multiple pupils can get free school meals by uploading a csv template.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dfe-card-container">
-                        <div class="def-card">
-                            <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="applications">Pending applications</a>
-                            </h2>
-                            <p>
-                                Check entitlement for children not found in the system.
-                            </p>
+                        <div class="dfe-card-container">
+                            <div class="def-card">
+                                <h2 class="govuk-heading-m">
+                                    <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Process_Appeals", "Application")" aria-label="Process appeals">Process appeals</a>
+                                </h2>
+                                <p>Check the status of applications being appealed, and declare those ready for local authority review.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dfe-card-container">
-                        <div class="def-card">
-                            <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="Application/Search">Search all records</a>
-                            </h2>
-                            <p>Search all pupil free school meal records and export results.</p>
+                        <div class="dfe-card-container">
+                            <div class="def-card">
+                                <h2 class="govuk-heading-m">
+                                    <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="applications" aria-label="Finalise applications">Finalise applications</a>
+                                </h2>
+                                <p>Finalise applications for free school meals.</p>
+                            </div>
+                        </div>
+                        <div class="dfe-card-container">
+                            <div class="def-card">
+                                <h2 class="govuk-heading-m">
+                                    <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="/Application/Search" aria-label="Search all records">Search all records</a>
+                                </h2>
+                                <p>Search all pupil free school meal records and export results.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-
-}
+        }
+        else if (@Model.Organisation.Category.Name == "Local Authority")
+        {
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-full">
+                    <div class="dfe-grid-container">
+                        <div class="dfe-card-container">
+                            <div class="def-card">
+                                <h2 class="govuk-heading-m">
+                                    <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Enter_Details", "Check")" aria-label="Check free school meals for single student">Check free school meals - single student</a>
+                                </h2>
+                                <p>Find out if individual pupils can get free school meals.</p>
+                            </div>
+                        </div>
+                        <div class="dfe-card-container">
+                            <div class="def-card">
+                                <h2 class="govuk-heading-m">
+                                    <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Batch_Check", "BulkUpload")" aria-label="Check free school meals for multiple students">Check free school meals - multiple students</a>
+                                </h2>
+                                <p>Find out if multiple pupils can get free school meals by uploading a csv template.</p>
+                            </div>
+                        </div>
+                        <div class="dfe-card-container">
+                            <div class="def-card">
+                                <h2 class="govuk-heading-m">
+                                    <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="applications" aria-label="Pending applications">Pending applications</a>
+                                </h2>
+                                <p>
+                                    Check entitlement for children not found in the system.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="dfe-card-container">
+                            <div class="def-card">
+                                <h2 class="govuk-heading-m">
+                                    <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="Application/Search" aria-label="Search all records">Search all records</a>
+                                </h2>
+                                <p>Search all pupil free school meal records and export results.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
     </div>
 </div>
 
