--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Loader.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Loader.cshtml
@@ -7,7 +7,7 @@
         <div class="flex-container">
             <div class="container">
                 <h1 class="govuk-heading-l">
-                    Checking
+                    Checking your entitlement
                 </h1>
                 <p class="govuk-body-l">Please wait. The check should take less than 30 seconds</p>
                 <svg role="status" class="spinner animation-spin" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
