--- a/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CheckYourEligibility_FrontEnd.Models.Children
 
 @{
-    ViewData["Title"] = "Provide details of your Children";
+    ViewData["Title"] = "Provide details of your children";
     ViewData["ServiceName"] = "Check a family's eligibility";
 }
 
@@ -14,6 +14,8 @@
 <h1 class="govuk-heading-l" tabindex="-1">
     Provide details of your children
 </h1>
+
+<p>Include all your children who are in compulsory education. You can use the add another option, if you have more than one child.</p>
 
 <form asp-controller="Check" asp-action="Enter_Child_Details" method="post" novalidate>
     @for (int i = 0; i < Model.ChildList.Count; i++)
