Update call to action text for parent journey. Also for schools/LA 175283 story as same task.

--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Check_Answers.cshtml
@@ -147,7 +147,7 @@
 
 
     <button class="govuk-button govuk-!-margin-top-5" data-module="govuk-button">
-        Register details
+        Submit application
     </button>
 
 
