--- a/CheckYourEligibility-Admin/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Check_Answers.cshtml
@@ -150,7 +150,7 @@
             }
 
             <button type="submit" class="govuk-button govuk-!-margin-top-5" data-module="govuk-button">
-                Register details
+                Submit application
             </button>
         </form>
     </div>
