Set image link to open in new tab

--- a/CheckYourEligibility-Parent/Views/Home/fsm_print_version.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/fsm_print_version.cshtml
@@ -11,7 +11,7 @@
 
     <section>
         <div class="govuk-grid-column-one-quarter">
-            <a target="_self" tabindex="-1" aria-hidden="true" href="/documents/fsm_application.pdf">
+            <a target="_blank" tabindex="-1" aria-hidden="true" href="/documents/fsm_application.pdf">
                 <img alt="" class="" src="/images/fsm-form-thumbnail.png">
             </a>
         </div>
